# K-Desktop-Agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF-RELEASE-v0.7.12.md  HANDOFF-RELEASE-v0.7.5.md  HANDOFF.md  PHASE1-UPGRADE.md  README.md  ROADMAP.md  SETUP-WINDOWS.md  VERSIONING.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  smoke.yml
docs/: APPLY-PHASE2-UPDATE.md  DEPLOYMENT.md  DEV_SETUP.md  PHASE-11-MULTI-PROVIDER.md  PHASE-2-TRAY.md  PHASE-4-SQLITE.md  PHASE-5-POLISH.md  PHASE-9-PERSONALIZATION.md
phase1-files/: App.css.additions  README-PHASE1.md  sidecar-src-index.ts  src-App.tsx  src-tauri-src-lib.rs
release/: README.txt
scripts/: README.md  backup.ps1  build-msi.ps1  build-release.ps1  bump-version.ps1  bundle-node.ps1  check.ps1  create-dev-shortcut.ps1  extract-pdf-text.ps1  full-rebuild-and-verify.ps1  gui-smoke.ps1  install-deps.ps1  install-kpersonal-mcp.ps1  install-rollback-shortcut.ps1  launch.vbs  rebuild-release.ps1  release-gate.mjs  release-version-guard.mjs  rollback.ps1  run-dev.ps1  setup-shortcuts.ps1  setup.ps1  smoke-attachment.ps1  smoke-pdf-extraction.ps1  smoke-rest-tools.ps1  smoke-sidecar.ps1
sidecar/: package-lock.json  package.json  test-cmdline-limit.mjs  test-codex-integration.mjs  test-context-builder.mjs  test-context-meter.mjs  test-gemini-integration.mjs  test-headless-mcp.mjs  test-hermes-parity.mjs  test-hook-overwriteGuard.mjs  test-hook-pitfallGuard.mjs  test-mcp-tools-emit.mjs  test-orchestration.mjs  test-perm-gate.mjs  test-project-mode.mjs  test-release-gate.mjs  test-sidebar-bulk-organize.mjs  tsconfig.json
sidecar/hooks/: preToolUse-overwriteGuard.mjs  preToolUse-pitfallGuard.mjs
sidecar/scripts/: probe-mcp.mjs  smoke-rest-tools.mjs
sidecar/src/: index.ts  mcpClient.ts  memorySync.ts  pdf-extract-cli.ts  pdfText.ts  restTools.ts  safetyStats.ts  statusLineSource.ts  toolSafety.ts  toolSchema.ts
src/: App.css  App.tsx  db.ts  index.css  prompts.ts  types.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  Composer.tsx  CornerBrackets.tsx  ElicitationDialog.tsx  FolderInstructionsDialog.tsx  LibraryPanel.tsx  MainChat.tsx  Message.tsx  MetricsPanel.tsx  PromptPicker.tsx  Settings.tsx  SidePanel.tsx  Sidebar.tsx  SidebarResizer.tsx  UpdateChecker.tsx
src/utils/: logger.ts  messageFilters.ts  safeModeSchedule.ts  toolSafety.ts  useStableCallback.ts
tests/fixtures/memory/: MEMORY.md  pitfall_ci_smoke.md
