[package]
name = "k-desktop-agent"
version = "0.1.0"
description = "K Desktop Agent - personal automation chat app"
authors = ["K"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "k_desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
tauri-plugin-single-instance = "2.0.1"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# 버전 핀: notify-debouncer-mini 는 patch 릴리스에서 `#[non_exhaustive]` 추가로 깨진 전례 있음.
# 업데이트 시 반드시 `scripts/check.ps1` 통과 확인 후에만 풀 것.
notify = { version = "=6.1.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "=0.4.1"
uuid = { version = "=1.23.1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
